re PR target/65263 (ICE (error: unrecognizable insn / in insn_min_length, at config/rs6000/rs6000.md) on powerpc64le-linux-gnu)

Fix PR ipa/65263.

	PR ipa/65263
	* cgraph.c (cgraph_node::has_thunk_p): New function.
	* cgraph.h (cgraph_node::has_thunk_p: Likewise.
	* ipa-icf.c (redirect_all_callers): Do not redirect thunks.
	(sem_function::merge): Assert is changed.
	* g++.dg/ipa/pr65263.C: New test.


Co-Authored-By: Jan Hubicka <hubicka@ucw.cz>

From-SVN: r221134